--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <div class="about-content">
                     <div class="about-text">
                         <h3>Building Impactful Technology Solutions</h3>
-                        <p>I am Tahsin Ahmed Islam, a final-year Computer Science and Engineering student at BRAC University, with a strong passion for software engineering and full-stack development. My professional goal is to design and develop scalable, efficient, and user-centric digital solutions that solve real-world problems while upholding high standards of code quality, performance, and usability.</p>
+                        <p>I am Tahsin Ahmed, a final-year Computer Science and Engineering student at BRAC University, with a strong passion for software engineering and full-stack development. My professional goal is to design and develop scalable, efficient, and user-centric digital solutions that solve real-world problems while upholding high standards of code quality, performance, and usability.</p>
                         <p>Alongside my academic journey, I have gained practical experience across software projects, event management, graphic design, and team leadership, enabling me to work effectively in both technical and collaborative environments. I value clean architecture, responsive design, and thoughtful user experience, and I continuously strive to expand my skill set in an ever-evolving technology landscape.</p>
 						<p>Driven by curiosity, discipline, and strong ethical values, I aim to contribute meaningfully to innovative teams while growing as a responsible and impactful software professional.</p>
                     </div>
