--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
     <div class="container">
         <!-- Header -->
         <header class="header">
+			<div class="logo">
+                <span class="logo-text"></span>
+            </div>
             <nav class="desktop-nav">
                 <ul class="nav-links">
                     <li><a href="#home" class="nav-link active">Home</a></li>
